update middle fields

--- a/index.html
+++ b/index.html
@@ -21,32 +21,42 @@
             </transition>
 
             <div class="container">
-                <div class="user-info">
-                    <div class="avatar">
-                        <img :src="avatar">
-                    </div>
-                    <span class="username"> Sobhan Zarrinpour </span> 
-                    <span class="email">sobhan.zarrinpour@gmail.com</span>
-                    <div class="technologies"> 
-                        <ul>
-                            <li class="skills"><span>JS <i></i></span></li>
-                            <li class="skills"><span>html</span></li>
-                            <li class="skills"><span>css</span></li>
-                            <li class="skills"><span>php</span></li>
-                            <li class="skills"><span>Mysql</span></li>
-                            <li class="skills"><span>c++</span></li>
-                            <li class="skills"><span>linux</span></li>
-                            <li class="skills"><span>node</span></li>
-                            <li class="skills"><span>Vue</span></li>
-                            <li class="skills"><span>Vuetify</span></li>
-                            <li class="skills"><span>Dart</span></li>
-                            <li class="skills"><span>Flutter</span></li>
-                            <li class="skills"><span>Electron</span></li>
-                            <li class="skills"><span>NativeScript</span></li>
-                        </ul> 
+                <div class="left-container">
+                    <div class="user-info">
+                        <div class="avatar">
+                            <img :src="avatar">
+                        </div>
+                        <span class="username"> Sobhan Zarrinpour </span> 
+                        <span class="email">sobhan.zarrinpour@gmail.com</span>
+                        <div class="technologies"> 
+                            <ul>
+                                <li class="skills"><span>JS <i></i></span></li>
+                                <li class="skills"><span>html</span></li>
+                                <li class="skills"><span>css</span></li>
+                                <li class="skills"><span>php</span></li>
+                                <li class="skills"><span>Mysql</span></li>
+                                <li class="skills"><span>c++</span></li>
+                                <li class="skills"><span>linux</span></li>
+                                <li class="skills"><span>node</span></li>
+                                <li class="skills"><span>Vue</span></li>
+                                <li class="skills"><span>Vuetify</span></li>
+                                <li class="skills"><span>Dart</span></li>
+                                <li class="skills"><span>Flutter</span></li>
+                                <li class="skills"><span>Electron</span></li>
+                                <li class="skills"><span>NativeScript</span></li>
+                            </ul> 
+                        </div>
                     </div>
                 </div>
-                
+                <div class="mid-container">
+                    <h3> Personal Information </h3>
+                    <p> My name is Sobhan Zarrinpour. I was born in guilan province of iran. </p>
+                    <p> I Love programming, also my favorite thing in my hole life till now is astronomy! </p>
+                    <br>
+                    <h3> Skills </h3>
+                    <p> I have skills in many field of programming like web, mobile or desktop but also have several years of experience in scientific programming. </p>
+                    <p> I learned languages like MATLAB and python for this purpose and I'm very good at it. </p>
+                </div>
             </div>
         </div>
         <script src="js/app.js"></script>
