--- a/index.html
+++ b/index.html
@@ -28,27 +28,29 @@
                         <div class="avatar card-image">
                             <img :src="avatar">
                         </div>
-                        <div class="card-title">
+                        <div class="card-title" style="text-align: center;">
                             <span class="username"> Sobhan Zarrinpour </span> 
                             <span class="email">sobhan.zarrinpour@gmail.com</span>
                         </div>
                         <div class="technologies card-body"> 
                             <ul>
-                                <li class="skills"><span>JS <i></i></span></li>
-                                <li class="skills"><span>html</span></li>
-                                <li class="skills"><span>css</span></li>
-                                <li class="skills"><span>php</span></li>
-                                <li class="skills"><span>Mysql</span></li>
-                                <li class="skills"><span>c++</span></li>
-                                <li class="skills"><span>linux</span></li>
-                                <li class="skills"><span>node</span></li>
-                                <li class="skills"><span>Vue</span></li>
-                                <li class="skills"><span>Vuetify</span></li>
+                                <li class="skills"><span>JS <i class="fab fa-js-square"></i></span></li>
+                                <li class="skills"><span>html <i class="fab fa-html5"></i></span></li>
+                                <li class="skills"><span>css <i class="fab fa-css3"></i></span></li>
+                                <li class="skills"><span>php <i class="fab fa-php"></i></span></li>
+                                <li class="skills"><span>Mysql <i class="fas fa-database"></i></span></li>
+                                <li class="skills"><span>c++ <i class="fas fa-copyright"></i></span></li>
+                                <li class="skills"><span>linux <i class="fab fa-linux"></i> <i
+                                            class="fab fa-ubuntu"></i> <i class="fab fa-suse"></i> <i
+                                                class="fab fa-redhat"></i> <i class="fab fa-centos"></i></span></li>
+                                <li class="skills"><span>node <i class="fab fa-node"></i></span></li>
+                                <li class="skills"><span>Vue <i class="fab fa-vuejs"></i></span></li>
+                                <li class="skills"><span>Vuetify <i class="fab fa-vuejs"></i></span></li>
                                 <li class="skills"><span>Dart</span></li>
                                 <li class="skills"><span>Flutter</span></li>
-                                <li class="skills"><span>Electron</span></li>
-                                <li class="skills"><span>NativeScript</span></li>
-                                <li class="skills"><span>Python</span></li>
+                                <li class="skills"><span>Electron <i class="fas fa-atom"></i></span></li>
+                                <li class="skills"><span>NativeScript </span></li>
+                                <li class="skills"><span>Python <i class="fab fa-python"></i></span></li>
                             </ul> 
                         </div>
                     </div>
