--- a/index.html
+++ b/index.html
@@ -79,18 +79,6 @@
 
                 <div class="right-container">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/guilan-uni-logo-footer.png" alt="Card image cap"
-                            style="padding: 10px;">
-                        <div class="card-body">
-                            <h5 class="card-title">Bachelor's degree</h5>
-                            <em style="font-size: 11px">pure mathematics</em>
-                            <p class="card-text">Study on computational Algebra</p>
-                            <a href="https://guilan.ac.ir/" target="_blank" class="btn btn-primary">Guilan University, Guilan
-                                (Iran)</a>
-                        </div>
-                    </div>
-
-                    <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="assets/iasbs-logo.png" alt="Card image cap"
                             style="padding: 10px;">
                         <div class="card-body">
@@ -102,6 +90,19 @@
                             <a href="https://iasbs.ac.ir/" target="_blank" class="btn btn-primary">
                                 IASBS,(Iran)
                             </a>
+                        </div>
+                    </div>
+
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/guilan-uni-logo-footer.png" alt="Card image cap"
+                            style="padding: 10px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Bachelor's degree</h5>
+                            <em style="font-size: 11px">pure mathematics</em>
+                            <p class="card-text">Study on computational Algebra</p>
+                            <a href="https://guilan.ac.ir/" target="_blank" class="btn btn-primary">Guilan University,
+                                Guilan
+                                (Iran)</a>
                         </div>
                     </div>
                 </div>
