js-css-refinement

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>my personal home page</title>
+        <title>my github personal home page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="personal home page of sobhan zarin pour, ui-ux, javascript developer">
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
